Overflow problem on animation section corrected

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -137,6 +137,8 @@ nav #menu {
     width: max-content;
     height: 20%;
     margin: 12% auto;
+    overflow-x: hidden;
+    
 }
 
 #animation-section h2 {
